k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erp-audit-client
  namespace: erp-audit
spec:
  selector:
    app: erp-audit-client
  ports:
    - port: 80
      targetPort: 80
